[tool.poetry]
name = "databricks-api-sample"
version = "0.1.0"
description = "Sample use of the databricks API"
authors = ["PMN"]

[tool.poetry.dependencies]
python = "^3.8"
databricks-cli = "^0.17.3"
black = "^22.10.0"
loguru = "^0.6.0"
isort = "^5.10.1"
hvac = {extras = ["parser"], version = "^1.0.2"}
jsons = "^1.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"
force_sort_within_sections = true 
multi_line_output = 3
